--- a/css/Paga-Style.css
+++ b/css/Paga-Style.css
@@ -1,66 +1,74 @@
-*{
+* {
     margin: 0px;
 }
 
-:root{
+:root {
     --bgdColour: #FFFFE3;
     --btnColor: #F16725;
     --spanColor: #FF5555;
-    --tColour:#1E1F38;  
+    --tColour: #1E1F38;
 }
 
 @font-face {
-    font-family:'Oxygen', sans-serif;
+    font-family: 'Oxygen', sans-serif;
     src: url('https://fonts.cdnfonts.com/css/oxygen');
 }
+
 @font-face {
-    font-family:'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
     src: url('https://fonts.cdnfonts.com/css/poppins');
 }
 
 /* THIS IS THE HEADER SECTION WHICH INCLUDES NAVIGATION AND LANDING */
-.header{
+.header {
     min-height: 740px;
     width: 100%;
     background-color: var(--bgdColour);
     background-position: center;
     background-size: cover;
     position: relative;
-    font-family:'Oxygen', sans-serif;
+    font-family: 'Oxygen', sans-serif;
 }
-nav{
+
+nav {
     display: flex;
     padding: 41.5px 0px 0px 131px;
 }
-.pagaLogo img{
+
+.pagaLogo img {
     width: 118.42px;
     height: 33px;
-    padding: 0px 160px 0px 0px; 
+    padding: 0px 160px 0px 0px;
 }
-.mobileR{
+
+.mobileR {
     display: flex;
     padding: 0px 0px 0px 0px;
     align-items: center;
     font-family: 'Poppins', sans-serif;
 }
-.nigLogo img{
+
+.nigLogo img {
     width: 34px;
-    height: 30px;
-    padding: 0px 0px 0px 97.42px; 
+    height: 20px;
+    padding: 0px 0px 0px 97.42px;
 }
-.nav-links ul li{
+
+.nav-links ul li {
     list-style: none;
     display: inline-block;
-    padding: 0px 0px 0px 40px; 
+    padding: 0px 0px 0px 40px;
 }
-nav a{
+
+nav a {
     text-decoration: none;
     font-weight: 500;
     font-size: 14px;
     line-height: 21px;
     color: var(--tColour)
 }
-.nav-links ul li::after{
+
+.nav-links ul li::after {
     content: '';
     width: 0%;
     height: 2px;
@@ -69,10 +77,12 @@ nav a{
     margin: auto;
     transition: 0.5s;
 }
-.nav-links ul li:hover::after{
+
+.nav-links ul li:hover::after {
     width: 100%;
 }
-.login::after{
+
+.login::after {
     content: '';
     width: 0%;
     height: 2px;
@@ -81,51 +91,59 @@ nav a{
     margin: auto;
     transition: 0.5s;
 }
-.login:hover::after{
+
+.login:hover::after {
     width: 100%;
 }
-.login{
+
+.login {
     color: var(--btnColor);
     margin-left: 78px;
 }
-.gStarted{
-    font-family:'Oxygen', sans-serif;
+
+.gStarted {
+    font-family: 'Oxygen', sans-serif;
     background-color: #F16725;
     padding: 15px 30px 15px 30px;
     color: #fff;
     border-radius: 4px
 }
-.gStarted:hover{
+
+.gStarted:hover {
     border-bottom: 0px;
     background-color: #FF5555;
     transition: 0.5s;
 }
 
-.landing-text{
+.landing-text {
     margin-left: 130px;
     padding: 200px 0px 0px 0px;
 }
-.landing-text h5{
+
+.landing-text h5 {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
     width: 300px;
     height: 21px;
-    color: var(--btnColor)  
+    color: var(--btnColor)
 }
-.landing-text h2{
+
+.landing-text h2 {
     font-weight: 700;
     font-size: 56px;
-    line-height: 122.5%; 
+    line-height: 122.5%;
     width: 568px;
     height: 207px;
     color: var(--tColour)
 }
-.landing-text h2 span{
+
+.landing-text h2 span {
     color: var(--btnColor)
 }
-.landing-text h4{
+
+.landing-text h4 {
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
@@ -134,10 +152,12 @@ nav a{
     height: 96px;
     padding: 16px 0px 31px 0px;
 }
-.landing-text b a{
+
+.landing-text b a {
     text-decoration: none;
 }
-.landing-text span a{
+
+.landing-text span a {
     font-weight: 500;
     font-size: 14px;
     line-height: 21px;
@@ -147,70 +167,87 @@ nav a{
     padding: 16px 0px 0px 40px;
     color: var(--spanColor)
 }
-.landing-text span a:hover{
+
+.landing-text span a:hover {
     color: red;
 }
-.roundImg{
+
+.roundImg {
     position: absolute;
     margin-left: 7%;
     left: 829px;
     top: 270px;
 }
-.webMobile{
+
+.webMobile {
     position: absolute;
     margin-left: 7%;
     left: 698px;
-    top: 229px;   
+    top: 229px;
 }
 
-.joinOver h2{
+.joinOver h2 {
     width: 579px;
     height: 118px;
     font-weight: 700;
     font-size: 48px;
     line-height: 122.5%;
-    font-family:'Oxygen', sans-serif;    
+    font-family: 'Oxygen', sans-serif;
     margin-left: 173px;
     padding: 136px 0px 0px 0px;
     color: var(--tColour)
 }
-.joinOver span{
+
+.joinOver span {
     color: var(--spanColor)
 }
+
+.menu-btn {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    width: 30px;
+    cursor: pointer;
+    display: none;
+}
+
 
 /* THIS IS THE FEATURES SECTION */
 /* A TOTAL NO. OF 8 FEATURES SECTION WAS USED THROUGHOUT THIS PROJECT */
 /* THIS IS THE 1ST FEATURES SECTION */
-#features{
+#features {
     gap: 8.03px;
     display: flex;
     justify-content: center;
     padding: 48px 0px 0px 0px;
-    font-family:'Oxygen', sans-serif;    
+    font-family: 'Oxygen', sans-serif;
 }
-.features-item{
+
+.features-item {
     padding: 32px 0px 0px 32px;
-    margin-left: 32px;
-    gap: 8.03px;
+    margin: 0px 70px 0px 0px;
     background-color: #FFFFE3;
     width: 300px;
     height: 304px;
-    border-radius: 30px;   
+    border-radius: 30px;
 }
-.features-item img{
+
+.features-item img {
     width: 50px;
     height: 50px;
 }
-.features-item h1{
-   margin: 24px 0px 16px 0px;
-   width: 500px;
-   height: 25px;
-   font-weight: 700;
-   font-size: 20px;
-   line-height: 122.5%;
-   color: var(--btnColor);
+
+.features-item h1 {
+    margin: 24px 0px 16px 0px;
+    width: 500px;
+    height: 25px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 122.5%;
+    color: var(--btnColor);
 }
-.features-item p{
+
+.features-item p {
     width: 269px;
     height: 60px;
     font-weight: 400;
@@ -218,69 +255,78 @@ nav a{
     line-height: 122.5%;
     margin: 16px 0px 40px 0px;
 }
-.features-link a{
+
+.features-link a {
     text-decoration: none;
     font-weight: 500;
     color: var(--btnColor)
 }
-.features-link a:hover{
+
+.features-link a:hover {
     color: red;
 }
-.whyPaga a{
-    font-family:'Oxygen', sans-serif;    
+
+.whyPaga a {
+    font-family: 'Oxygen', sans-serif;
     position: absolute;
     margin: 85px 0px 0px 684px;
     background-color: #FDB913;
     padding: 6.5px 24px 6.5px 24px;
     color: #fff;
     text-decoration: none;
-    border-radius: 30px    
+    border-radius: 30px
 }
-.whyPaga a:hover{
+
+.whyPaga a:hover {
     color: rgb(232, 206, 174);
 }
-.freedom{
-    font-family:'Oxygen', sans-serif;    
+
+.freedom {
+    font-family: 'Oxygen', sans-serif;
     position: absolute;
     margin: 126px 0px 0px 414px;
-    color:  #1E1F38;
+    color: #1E1F38;
     font-weight: 700;
     font-size: 48px;
     line-height: 122.5%;
     padding-top: 8px;
 }
-.freedom span{
+
+.freedom span {
     color: #FF5555;
 }
 
 /* 2ND FEATURES SECTION */
-#features2{
+#features2 {
     gap: 8.03px;
     display: flex;
     justify-content: center;
     padding: 305.5px 0px 48px 0px;
-    font-family:'Oxygen', sans-serif;  
+    font-family: 'Oxygen', sans-serif;
 }
-.features-item2{
+
+.features-item2 {
     padding: 32px 0px 0px 0px;
-    margin-left: 32px;
-    gap: 8.03px;
+    margin-right: 80px;
     width: 300px;
-    height: 304px;  
+    height: 304px;
     text-align: center;
 }
-.features-item2 img{
+
+.features-item2 img {
     width: 100px;
     height: 100px;
 }
-.features-item2 h1{
-   padding: 32px 0px 0px 0px;
-   font-weight: 700;
-   font-size: 20px;
-   line-height: 122.5%;
-   color: var(--btnColor)
+
+.features-item2 h1 {
+    padding: 32px 0px 0px 0px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 122.5%;
+    color: var(--btnColor)
 }
-.features-item2 p{
+
+.features-item2 p {
     width: 269px;
     height: 60px;
     font-weight: 400;
@@ -290,19 +336,21 @@ nav a{
 }
 
 /* 3RD FEATURES SECTION */
-#features3{
+#features3 {
     position: absolute;
     width: 100%;
     height: 759px;
     left: 0px;
     top: 2463px;
     background: #FFFFE3;
-    
+
 }
-.features-item3{
-    font-family:'Oxygen', sans-serif;
+
+.features-item3 {
+    font-family: 'Oxygen', sans-serif;
 }
-.payYour{
+
+.payYour {
     color: #1E1F38;
     padding: 55px 0px 0px 152px;
     width: 750px;
@@ -311,10 +359,12 @@ nav a{
     font-size: 48px;
     line-height: 125%;
 }
-.payYour span{
+
+.payYour span {
     color: var(--spanColor);
 }
-.selectBiller{
+
+.selectBiller {
     width: 419px;
     height: 37px;
     font-weight: 700;
@@ -323,24 +373,27 @@ nav a{
     padding: 20px 0px 0px 152px;
     color: var(--spanColor);
 }
-.featuresLogo{
+
+.featuresLogo {
     display: flex;
     padding: 48px 0px 0px 152px;
     gap: 40px;
 }
-.featuresLogo1{
+
+.featuresLogo1 {
     display: flex;
     padding: 56px 0px 0px 152px;
     gap: 40px;
 }
-.featuresLogo2{
+
+.featuresLogo2 {
     display: flex;
     padding: 56px 0px 0px 250px;
     gap: 40px;
 }
 
 /* 4TH FEATURES SECTION */
-#features4{
+#features4 {
     position: absolute;
     width: 1165px;
     height: 490px;
@@ -348,19 +401,21 @@ nav a{
     top: 3322px;
     background: #F16725;
     border-radius: 30px;
-    font-family:'Oxygen', sans-serif;   
-    
+    font-family: 'Oxygen', sans-serif;
+
 }
-.needAgent{
+
+.needAgent {
     position: absolute;
     margin: 96px 0px 0px 110px;
     background-color: #FDB913;
     padding: 6px 12px 6px 12px;
     color: var(--bgdColour);
     text-decoration: none;
-    border-radius: 40px    
+    border-radius: 40px
 }
-.overAgent{
+
+.overAgent {
     width: 453px;
     height: 118px;
     font-weight: 700;
@@ -370,7 +425,8 @@ nav a{
     padding: 134px 0px 0px 0px;
     color: #FFFFFF;
 }
-.youCan{
+
+.youCan {
     width: 460px;
     height: 75px;
     font-weight: 700;
@@ -379,29 +435,34 @@ nav a{
     color: rgba(255, 255, 255, 0.8);
     padding: 8px 0px 40px 110px;
 }
-.findAgent{
+
+.findAgent {
     margin: 0px 0px 0px 110px;
-    line-height: 18px 
+    line-height: 18px
 }
-.findAgent a{
-    color: var(--btnColor);  
+
+.findAgent a {
+    color: var(--btnColor);
     font-weight: 700;
     font-size: 14px;
     background-color: #FFFFFF;
     padding: 15px 30px 15px 30px;
     text-decoration: none;
-    border-radius: 4px  
+    border-radius: 4px
 }
-.findAgent a:hover{
+
+.findAgent a:hover {
     transition: 1s;
     background-color: #f7e7e7;
     color: red
 }
-.bAgent{
+
+.bAgent {
     margin: 0px 0px 0px 10px;
     line-height: 18px
 }
-.bAgent a{
+
+.bAgent a {
     font-weight: 700;
     font-size: 14px;
     color: #FFFFFF;
@@ -410,75 +471,85 @@ nav a{
     border: 1px solid #FFFFFF;
     border-radius: 4px;
 }
-.bAgent a:hover{
+
+.bAgent a:hover {
     transition: 1.5s;
     background-color: #FF5555
-    
 }
-.img1{
+
+.img1 {
     position: absolute;
     left: 677px;
     top: 55px;
 }
-.img2{
+
+.img2 {
     position: absolute;
     left: 932px;
     top: 82px;
 }
-.img3{
+
+.img3 {
     position: absolute;
     left: 812px;
     top: 270px;
 }
 
 /* 5TH FEATURES SECTION */
-#features5{
+#features5 {
     position: absolute;
     width: 1440px;
     height: 647px;
     left: 0px;
     top: 3932px;
     background: #FFFFFF;
-    font-family:'Oxygen', sans-serif;  
+    font-family: 'Oxygen', sans-serif;
 }
-.hCustomers{
+
+.hCustomers {
     position: absolute;
     margin: 60px 0px 0px 493.5px;
-    color:  #1E1F38;
+    color: #1E1F38;
     font-weight: 700;
     font-size: 40px;
 }
-.hCustomers span{
+
+.hCustomers span {
     color: #FF5555;
 }
-.features-item5{
+
+.features-item5 {
     position: absolute;
     display: flex;
     margin-top: 200px;
-    margin-left: 164px;
-    gap: 50px;
+    margin-left: 100px;
+    gap: 70px;
 }
-.features-item5 img{
+
+.features-item5 img {
     width: 170px;
     height: 170px;
     border: 4px solid #FF5555;
     border-radius: 100px;
 }
-.features-item5 h1{
-   padding: 16px 0px 16px 20px;
-   width: 225px;
-   height: 25px;
-   font-weight: 700;
-   font-size: 20px;
-   color: #1E1F38
+
+.features-item5 h1 {
+    padding: 16px 0px 16px 20px;
+    width: 225px;
+    height: 25px;
+    font-weight: 700;
+    font-size: 20px;
+    color: #1E1F38
 }
-.features-item5a h1 img{
+
+.features-item5a h1 img {
     height: 17px;
-    width: 20.92px; 
+    width: 20.92px;
     border: none;
-   
+
 }
-.features-item5 p{
+
+.features-item5 p {
     width: 250px;
     height: 40px;
     font-weight: 400;
@@ -487,29 +558,33 @@ nav a{
     color: rgba(30, 31, 56, 0.8);
     padding: 0px 0px 20px 16px;
 }
-.features-item5a{
-    
+
+.features-item5a {
+
     text-align: center;
 }
-.transition{
+
+.transition {
     width: 24px;
     height: 24px;
-    margin: 600px 0px 0px 780px;
+    margin: 600px 0px 0px 750px;
     background: #FF5555;
     border-radius: 12px;
     cursor: pointer;
 }
 
 /* 6TH FEATURES SECTION */
-#features6{
+#features6 {
     position: absolute;
     top: 4679px;
-    background: #FFFFFF;   
+    background: #FFFFFF;
 }
-.features-item6{
-    font-family:'Oxygen', sans-serif;
+
+.features-item6 {
+    font-family: 'Oxygen', sans-serif;
 }
-.weAre{
+
+.weAre {
 
     padding: 55px 0px 0px 152px;
     width: 700px;
@@ -519,15 +594,17 @@ nav a{
     line-height: 125%;
     color: var(--tColour)
 }
-.weAre span{
+
+.weAre span {
     color: var(--spanColor)
 }
-.features-item6 img{
+
+.features-item6 img {
     padding: 55px 0px 0px 152px;
 }
 
 /* 7TH FEATURES SECTION */
-#features7{
+#features7 {
     position: absolute;
     width: 1165px;
     height: 404px;
@@ -535,18 +612,19 @@ nav a{
     top: 5524px;
     background: #F16725;
     border-radius: 30px;
-    font-family:'Oxygen', sans-serif;       
+    font-family: 'Oxygen', sans-serif;
 }
 
-.pagaIs{
+.pagaIs {
     position: absolute;
     margin: 56px 0px 0px 110px;
     background-color: #FDB913;
     padding: 12px 24px 12px 24px;
     color: #fff;
-    border-radius: 30px    
+    border-radius: 30px
 }
-.dApp{
+
+.dApp {
     width: 567px;
     height: 135px;
     font-weight: 700;
@@ -556,20 +634,23 @@ nav a{
     padding: 113px 0px 0px 0px;
     color: #FFFFFF;
 }
-.pStore a{
-    margin: 0px 0px 0px 110px;     
+
+.pStore a {
+    margin: 0px 0px 0px 110px;
 }
-.aStore a{
+
+.aStore a {
     padding: 0px 0px 0px 50px;
 }
-.hPhone{
+
+.hPhone {
     position: absolute;
     left: 738px;
     top: 45px;
-    border: 1px solid #FDB913 
+    border: 1px solid #FDB913
 }
 
-.fSpace{
+.fSpace {
     position: absolute;
     width: 1519px;
     height: 471px;
@@ -579,21 +660,23 @@ nav a{
 
 /* 8TH FEATURES SECTION */
 /* FOOTER */
-#features8{
+#features8 {
     position: absolute;
     width: 100%;
     height: 471px;
     top: 6108px;
     background: #FFFFE3;
     color: #1E1F38;
-    font-family:'Oxygen', sans-serif;
+    font-family: 'Oxygen', sans-serif;
 }
-footer{
+
+footer {
     display: flex;
     justify-content: center;
-    margin: 96px 0px 0px 0px;
+    margin: 96px 0px 0px 70px;
 }
-.pagaFooter p{
+
+.pagaFooter p {
     padding: 24px 0px 0px 0px;
     width: 278px;
     height: 120px;
@@ -603,14 +686,16 @@ footer{
     text-align: justify;
     color: #1E1F38;
 }
-.sLogo img{
+
+.sLogo img {
     padding: 24px 0px 0px 10px;
 }
-.pagaFooter{
+
+.pagaFooter {
     padding: 0px 100px 0px 70px;
 }
 
-.fHead h6{ 
+.fHead h6 {
     width: 200px;
     height: 30px;
     font-weight: 500;
@@ -619,7 +704,8 @@ footer{
     color: #FF5555;
     padding: 0px 0px 24px 0px;
 }
-.fHead a{
+
+.fHead a {
     display: flex;
     text-decoration: none;
     width: 160px;
@@ -629,18 +715,21 @@ footer{
     line-height: 24px;
     color: #1E1F38;
 }
-.fHead a:hover{
+
+.fHead a:hover {
     color: #FF5555;
 }
-.reachUs p{
-    width: 200px;
+
+.reachUs p {
+    width: 400px;
     height: 44px;
     font-weight: 400;
     font-size: 14px;
     line-height: 30px;
-    color: #1E1F38; 
+    color: #1E1F38;
 }
-.reachUs h6{ 
+
+.reachUs h6 {
     width: 250px;
     font-weight: 500;
     font-size: 20px;
@@ -648,7 +737,8 @@ footer{
     color: #FF5555;
     padding: 0px 0px 24px 0px;
 }
-.reachUs a{
+
+.reachUs a {
     display: flex;
     text-decoration: none;
     height: 44px;
@@ -657,51 +747,186 @@ footer{
     line-height: 24px;
     color: #1E1F38;
 }
-.reachUs a:hover{
+
+.reachUs a:hover {
     color: #FF5555;
 }
 
-.reachUs img{
-    padding: 5px 10px 0px 0px; 
+.reachUs img {
+    padding: 5px 10px 0px 0px;
 }
-.footerEnd{
+
+.footerEnd {
     display: flex;
     margin-left: 135px;
     margin-right: 0px;
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-    font-family:'Oxygen', sans-serif;
+    font-family: 'Oxygen', sans-serif;
     color: #1E1F38;
-    padding: 60px 0px 20px 0px;      
+    padding: 60px 0px 20px 0px;
 }
-.rightFooter{
-    margin-left: auto;
-} 
-.l{
+
+.rightFooter {
+    margin-left: 770px;
+}
+
+.l {
     padding: 0px 8px 0px 0px;
 }
-.t{
-    padding: 0px 41px 0px 0px; 
+
+.t {
+    padding: 0px 41px 0px 0px;
 }
-.s{
-    padding: 0px 150px 0px 0px; 
+
+.s {
+    padding: 0px 150px 0px 0px;
 }
-.rightFooter a{
+
+.rightFooter a {
     text-decoration: none;
-    color: #1E1F38; 
+    color: #1E1F38;
 }
-.rightFooter a:hover{
-    text-decoration:underline
+
+.rightFooter a:hover {
+    text-decoration: underline
 }
 
 
 
 /* MOBILE RESPONSIVENESS SECTION */
+@media only screen and (max-width:600px) {
+    .menu-btn {
+        display: block;
+    }
 
+    nav {
+        padding: 0px;
+    }
 
+    .pagaLogo {
+        position: absolute;
+        top: 30px;
+        left: 30px;
+    }
 
+    .mobileR {
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        background: #FDB913;
+        margin-top: -900px;
+        transition: all 0.5s ease;
+    }
 
+    .nav-links li {
+        columns: 3;
+        margin: 40px 0px 0px 150px;
+    }
 
+    .gStarted {
+        padding: 5px 5px;
+        margin: 15px 10px 20px 0px;
+        width: 80px;
+    }
 
+    .nigLogo {
+        margin: 25px 30px 0px 0px;
+    }
 
+    .login {
+        padding: 15px 10px 0px 0px;
+    }
+
+    .mobile-menu {
+        margin-top: 0px;
+        border-bottom-left-radius: 40%;
+    }
+
+    .landing h5 {
+        display: none;
+    }
+
+    .landing-text {
+        text-align: center;
+    }
+
+    .landing-text h2 {
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 122.5%;
+        width: 296px;
+        height: 50px;
+        color: var(--tColour)
+    }
+
+    .landing-text h2 span {
+        color: var(--btnColor)
+    }
+
+    .landing-text h4 {
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 24px;
+        width: 292px;
+        height: 84px;
+    }
+
+    .joinOver h2 {
+        width: 278px;
+        height: 58px;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 122.5%;
+        text-align: center;
+    }
+
+    #features {
+        gap: 8.03px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .features-item {
+        padding: 32px 0px 0px 32px;
+        margin-left: 32px;
+        gap: 8.03px;
+        background-color: #FFFFE3;
+        width: 300px;
+        height: 304px;
+        border-radius: 30px;
+
+    }
+
+    .features-item img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .features-item h1 {
+        margin: 24px 0px 16px 0px;
+        width: 107px;
+        height: 22px;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 122.5%;
+    }
+
+    .features-item p {
+        width: 269px;
+        height: 51px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 122.5%;
+        margin: 16px 0px 40px 0px;
+    }
+
+    .features-link a {
+        font-weight: 700;
+        font-size: 14px;
+        width: 73px;
+        height: 17px;
+    }
+
+}
